api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indyscan-api
  labels:
    app: indyscan-api
    app.kubernetes.io/part-of: CANdyScan
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indyscan-api
  template:
    metadata:
      labels:
      app: indyscan-api
      app.kubernetes.io/part-of: CANdyScan
      env: prod
    spec:
      containers:
        - image: pstas/indyscan-api:4.1.0
          name: indyscan-api
          ports:
            - containerPort: 3708
          volumeMounts:
            - mountPath: /home/indyscan/indyscan-api/app-config-docker/candydev.json
              name: api-config-volume
              subPath: candydev.json
      volumes:
        - name: api-config-volume
          configMap:
            name: api-config
            items:
              - key: api_config.json
                path: candydev.json
