api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candyscan-api
  labels:
    name: candyscan-api
    app: CANdyScan
    app.kubernetes.io/part-of: CANdyScan
    role: api
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: CANdyScan
  template:
    metadata:
      labels:
      name: candyscan-api
      app: CANdyScan
      app.kubernetes.io/part-of: CANdyScan
      role: api
      env: prod
    spec:
      containers:
        - image: pstas/indyscan-api:4.1.0
          name: candyscan-api
          ports:
            - containerPort: 3708
          volumeMounts:
            - mountPath: /home/indyscan/indyscan-api/app-config/candydev.json
              name: candyscan-api-volume
              subPath: candydev.json
      volumes:
        - name: candyscan-api-volume
          configMap:
            name: candyscan-api
            items:
              - key: api_config.json
                path: candydev.json
