api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: candyscan-api
  labels:
    name: candyscan-api
    app.kubernetes.io/part-of: CANdyScan
    env: prod
spec:
  selector:
    app: candyscan-api
  ports:
    - protocol: TCP
      port: 3708
      targetPort: 3708
